--- a/html/hypothesis.html
+++ b/html/hypothesis.html
@@ -2,7 +2,7 @@
 <link href="../css/project.css" type="text/css" rel="stylesheet">
 <body id="b4">
 <h1 id="head"> Hypothesis </h1>
-<h2> The unemployment rate in the United States has increased over the past several months due to COVID-19. If COVID-19 continues to spread, then the unemployment rates will continue to rise. Buisinesses and restraunts will continue to close and leave many more Americans unemployed. </h2>
+<h2> The unemployment rate in the United States has increased over the past several months due to COVID-19. If people do well containing COVID-19, then the unemployment rates will continue to drop. Unemployment rates will go back to normal and be steady. </h2>
 
     
     <a href="dashboard.html"> Home </a>
